Updated folder structure

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,509 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
-}
-
-.startScherm,
-.stopScherm {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: black;
-    opacity: 0.8;
-    z-index: 99;
-    top: 0;
-}
-.hidden {
-    display: none;
-}
-
-.startIntructions {
-    position: absolute;
-    margin: 0;
-    top: 10%;
-    width: 50rem;
-    transform: translatex(70%);
-    height: 20rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 2rem;
-    color: black;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-}
-
-.startImage {
-    display: block;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background: url(/img/generic-mouse.png) no-repeat;
-    width: 5rem; /* Width of new image */
-    height: 5rem; /* Height of new image */
-    margin-left: 2rem;
-    animation-name: mousemove, mousemovey;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-delay: 1s;
-}
-
-.startTitle {
-    font-size: 2rem;
-}
-
-.startTekst {
-    font-size: 1.3rem;
-}
-
-.startButton {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: green;
-    color: white;
-    padding: 10px 15px;
-    opacity: 1;
-    border: none;
-    width: 10rem;
-    height: 5rem;
-    font-size: 2rem;
-    border-radius: 2rem;
-}
-
-.startFooter {
-    position: absolute;
-    margin: 0;
-    bottom: 8%;
-    width: 40rem;
-    transform: translatex(100%);
-    height: 8rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 2rem;
-    color: black;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0.8;
-}
-
-.startFooterImage {
-    max-width: 3rem;
-    max-height: 3rem;
-    transform: rotate(180deg);
-}
-
-.startFooterTekst {
-    font-size: 1.2rem;
-}
-
-.startSettings {
-    position: absolute;
-    margin: 0;
-    bottom: 5%;
-    right: 0;
-    width: 10rem;
-    height: 8rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 2rem;
-    color: black;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0.8;
-}
-
-.startSettingsImage {
-    max-width: 3rem;
-    max-height: 3rem;
-    transform: rotate(145deg);
-}
-
-.startOptions {
-    position: absolute;
-    margin: 0;
-    top: 8%;
-    right: 0;
-    width: 10rem;
-    height: 8rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 2rem;
-    color: black;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0.8;
-}
-
-.startOptionsImage {
-    max-width: 3rem;
-    max-height: 3rem;
-    transform: rotate(20deg);
-}
-
-.topBar,
-.bottomBar {
-    position: fixed;
-    width: 100%;
-    display: block;
-}
-
-.topbar {
-    top: 0;
-}
-
-.bottomBar {
-    bottom: 0;
-}
-
-#place {
-    margin-right: 5rem;
-}
-
-.progressBar {
-    max-width: 500px;
-    margin: auto;
-    padding: 15px;
-    border-radius: 10px 10px 0 0;
-    background-color: white;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-}
-
-/* h1 {
-    font-size: 2rem;
-    margin-top: 1.5rem;
-    color: orange;
-    text-align: center;
-} */
-
-/* .vr-button {
-    padding: 10px;
-    border-radius: 100%;
-    background-color: #45bccb;
-    color: white;
-    position: fixed;
-    left: 5%;
-    top: 5%;
-    font-size: 1rem;
-    border: none;
-}
-.vr-button:hover {
-    cursor: pointer;
-} */
-
-.infospot {
-    border-radius: black;
-    background-color: white;
-    max-width: 300px;
-    color: black;
-    padding: 15px;
-    overflow: hidden;
-}
-
-.infospot .title {
-    color: black;
-}
-
-.title {
-    font-size: 2rem;
-    color: white;
-}
-
-.text {
-    font-size: 1rem;
-    color: white;
-}
-
-/* panorama */
-.pan {
-    width: 100vw;
-    height: 100vh;
-}
-
-.menu,
-.locatieInformatie {
-    display: flex;
-    margin-right: 20px;
-}
-
-.locatieInformatie {
-    margin-left: 25px;
-    margin-right: 0;
-}
-.menuBtn,
-.infoBtn {
-    background-color: #45bccb;
-    color: white;
-    padding: 15px;
-    border-radius: 100%;
-    border: none;
-}
-
-.infoBtn {
-    width: 30px;
-    height: 30px;
-    padding: 0;
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.menuImg {
-    display: block;
-    max-width: 20px;
-    height: 20px;
-}
-.footerTitle {
-    color: orange;
-}
-
-.menuContent {
-    display: none;
-    position: absolute;
-    background-color: white;
-    padding: 10px;
-    list-style: none;
-    margin-top: 12px;
-}
-
-.informatie {
-    display: none;
-    position: absolute;
-    background-color: white;
-    box-shadow: 9px 11px 20px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    padding: 10px;
-    width: 200px;
-    bottom: 120%;
-}
-
-.menuBtn:hover {
-    background-color: white;
-}
-
-.menu:hover .menuContent,
-.locatieInformatie:hover .informatie {
-    display: block;
-}
-
-:root {
-    --header-min-height: 5vh;
-    --subtle-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: var(--header-min-height);
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.header__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* flex-direction: row-reverse; */
-}
-
-.header__buttons {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    flex-basis: 70%;
-    justify-content: flex-end;
-}
-
-.header__title {
-    display: flex;
-    /* justify-content: flex-start; */
-    font-size: 2rem;
-    color: #ffa500;
-    padding: 1rem;
-    flex-basis: 70%;
-}
-
-.button {
-    border: none;
-    padding: 1rem;
-    border-radius: 100%;
-    background-color: #45bccb;
-    color: #fff;
-    font-size: 1rem;
-    max-width: 3rem;
-    max-height: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.button:hover {
-    cursor: pointer;
-}
-
-.pan {
-    width: 100vw;
-    height: 100vh;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: block;
-    padding-bottom: 0.75rem;
-}
-
-.progress__container {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
-
-.progress {
-    border: 0.2rem solid #fff;
-    border-radius: 1rem;
-    padding: 0.25rem;
-    height: 2rem;
-    width: 100%;
-    flex-basis: 70%;
-}
-
-.progress__bar {
-    background-color: #45bccb;
-    border-radius: 1rem;
-    text-align: center;
-    transition: all 0.2s ease-in-out;
-    height: 100%;
-}
-
-/* Infospot Styling Rules */
-.infospot {
-    background-color: #fff;
-    padding: 1rem;
-    box-shadow: var(--subtle-shadow);
-}
-
-.infospot__title {
-    color: #ffa500;
-}
-
-.infospot__content {
-    color: #45bccb;
-}
-
-/* Achievements Styling Rules */
-.achievements {
-    opacity: 0;
-    display: none;
-    width: 36rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1rem;
-    background-color: #fff;
-    box-shadow: var(--subtle-shadow);
-    transition: opacity 0.2s ease-in-out;
-    user-select: none;
-}
-
-.achievements--open {
-    opacity: 1;
-    display: block;
-    user-select: all;
-}
-
-.achievements__title {
-    margin-bottom: 0.25rem;
-}
-
-.achievements__list {
-    list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.achievements__achievement {
-    border: 0.1rem solid #45bccb;
-    padding: 0.5rem;
-}
-
-.achievements__achievement--unlocked {
-    background-color: #45bccb;
-}
-
-.achievements__achievement__title {
-    margin-bottom: 0.25rem;
-}
-
-.achievements__achievement__text {
-    font-style: italic;
-}
-
-.achievements__achievement__text::before {
-    content: open-quote;
-}
-
-.achievements__achievement__text::after {
-    content: close-quote;
-}
-
-/* Achievement Pop-up Rules */
-.achievement {
-    display: block;
-    width: 36rem;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(-100%);
-    background-color: #fff;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-}
-
-.achievement--unlocked {
-    transform: translateX(-50%) translateY(0);
-}
-
-.achievement__title {
-    text-align: center;
-    padding: 1rem 0;
-}
-
-@keyframes mousemove {
-    0% {
-        margin-right: 0;
-        background: url(/img/mouse-left-click.png) no-repeat;
-    }
-    30% {
-        margin-right: 12rem;
-    }
-    60% {
-        margin-right: -12rem;
-    }
-    80% {
-        background: url(/img/mouse-left-click.png) no-repeat;
-    }
-    100% {
-        margin-right: 0;
-    }
-}
+@import 'reset';
+@import 'tour';
