--- a/css/main.css
+++ b/css/main.css
@@ -405,15 +405,25 @@ body {
 }
 .main {
   padding-block: 1rem;
-  padding-inline: 2rem;
+  max-width: 75rem;
+  margin-inline: auto;
 }
 
 .search {
+  display: block;
+  width: 100%;
   border-radius: 0.5rem;
   border: 0.125rem solid #d9d9d9;
   background-color: #d9d9d9;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
+  background-image: url(../icons/search_icon.svg);
+  background-repeat: no-repeat;
+  background-position: 0.75rem center;
+  margin-bottom: 2rem;
+  padding-block: 1rem;
+  padding-left: 3rem;
+  padding-right: 1rem;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 .filters {
@@ -422,6 +432,7 @@ body {
   background-color: #d9d9d9;
   padding-block: 1rem;
   padding-left: 1rem;
+  margin-bottom: 2rem;
   border-radius: 0.5rem;
 }
 
@@ -437,7 +448,7 @@ body {
   align-items: center;
   gap: 0.5rem;
 }
-.categories__category span {
+.categories__category label {
   text-transform: capitalize;
 }
 
@@ -452,4 +463,33 @@ body {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.educations {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  gap: 1rem;
+}
+.educations__education {
+  background-color: #45bccb;
+  border-radius: 0.5rem;
+  transform: scale(1);
+  transition: transform 0.2s ease-in-out;
+}
+.educations__education:hover {
+  transform: scale(1.025);
+}
+.educations__education__img {
+  display: block;
+  max-width: 100%;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.educations__education__school {
+  font-weight: 400;
+  color: #fff;
+}
+.educations__education__info {
+  padding: 1rem;
 }/*# sourceMappingURL=main.css.map */
