--- a/css/_cms.scss
+++ b/css/_cms.scss
@@ -1,6 +1,7 @@
 $white-color: #fff;
 $grey-color: #d9d9d9;
 $green-color: #45bccb;
+$red-color: #e76f51;
 $base-radius: 0.5rem;
 
 .main {
@@ -102,7 +103,18 @@ $base-radius: 0.5rem;
         }
 
         &__info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             padding: 1rem;
+        }
+
+        &__label {
+            display: inline-block;
+            padding: 0.5rem;
+            background-color: $red-color;
+            color: $white-color;
+            border-radius: $base-radius;
         }
     }
 }
