--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,10 @@ body {
     margin-right: 0;
   }
 }
+body {
+  overflow: initial;
+}
+
 .main {
   padding-block: 1rem;
   max-width: 75rem;
@@ -468,11 +472,12 @@ body {
   gap: 0.5rem;
 }
 
-.educations {
+.educations__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   gap: 1rem;
+  margin-block: 2rem;
 }
 .educations__education {
   background-color: #45bccb;
@@ -499,6 +504,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  text-transform: capitalize;
 }
 .educations__education__label {
   display: inline-block;
