Final commit for demo

--- a/css/main.css
+++ b/css/main.css
@@ -378,7 +378,6 @@ body {
   background-color: #fff;
   padding: 1rem;
   box-shadow: var(--subtle-shadow);
-  left: 300px;
 }
 
 .infospot__title {
@@ -407,7 +406,7 @@ body {
     margin-right: 0;
   }
 }
-body {
+body.u-overflow {
   overflow: initial;
 }
 
