--- a/css/main.css
+++ b/css/main.css
@@ -388,6 +388,42 @@ body {
   color: #45bccb;
 }
 
+.achievements {
+  display: block;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 10%;
+  right: 1%;
+  transform: translateY(-10%);
+  background-color: #fff;
+  padding-block: 1rem;
+  padding-inline: 3rem;
+  border-radius: 0.5rem;
+  transition: all 0.2s ease-in-out;
+}
+.achievements--open {
+  opacity: 1;
+  pointer-events: all;
+}
+.achievements__title {
+  margin-bottom: 0.5rem;
+}
+.achievements__list {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(10rem, 1fr));
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  row-gap: 0.5rem;
+}
+.achievements__achievement {
+  border: 0.1rem solid #000;
+}
+.achievements__achievement--unlocked {
+  background-color: #45bccb;
+}
+
 @keyframes mousemove {
   0% {
     margin-right: 0;
