--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,7 @@ body {
   overflow: hidden;
 }
 
-.startScherm,
-.stopScherm {
+.startScherm {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -234,8 +233,8 @@ body {
 }
 
 .infoBtn {
-  width: 30px;
-  height: 30px;
+  width: 2rem;
+  height: 2rem;
   padding: 0;
   font-size: 24px;
   font-weight: 700;
@@ -404,6 +403,58 @@ body {
   }
   100% {
     margin-right: 0;
+  }
+}
+@media (orientation: portrait) {
+  .orientatie {
+    display: block;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (orientation: landscape) {
+  .orientatie {
+    display: none;
+  }
+}
+@media screen and (max-height: 600px) {
+  h1, h2, h3 {
+    font-size: 1rem;
+  }
+  .header {
+    padding-top: 12px;
+  }
+  .header__title {
+    font-size: 1rem;
+    padding: 0;
+  }
+  .button {
+    max-width: 2rem;
+    max-height: 2rem;
+  }
+  .progressBar {
+    max-width: 300px;
+    padding: 14px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+  }
+  #place {
+    margin: 0;
+  }
+  .infoBtn {
+    height: 1.5rem;
+    width: 1.5rem;
+    font-size: 16px;
   }
 }
 body.u-overflow {
