--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,7 @@ body {
 
 .progress__bar {
   background-color: #45bccb;
+  color: #fff;
   border-radius: 1rem;
   text-align: center;
   transition: all 0.2s ease-in-out;
