--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,19 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
+}
+.button:hover {
+  animation-name: breathe;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.button--reset:hover {
+  animation-name: turn;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 .button:hover {
@@ -476,6 +489,31 @@ body {
   }
   100% {
     transform: translateX(0);
+  }
+}
+@keyframes turn {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes breathe {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  75% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 @media (orientation: portrait) {
