--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -396,6 +396,27 @@ body {
         margin-bottom: 1rem;
     }
 
+    &__close {
+        background: none;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        width: 2rem;
+        height: 2rem;
+        background-color: #45bccb;
+        border-radius: 50%;
+        transition: all 0.2s linear;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #ffa500;
+        }
+    }
+
     &__list {
         list-style-type: none;
         display: grid;
