verder met mobile styling

--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -429,6 +429,15 @@ body {
         padding: 0;
     }
 
+    .progress{
+        height: 1.5rem;
+        padding: 3px;
+    }
+
+    .infospot__content{
+        font-size: 14px;
+    }
+
     .button {
         max-width: 2rem;
         max-height: 2rem;
