--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,13 @@ body {
     font-size: 1rem;
     padding: 0;
   }
+  .progress {
+    height: 1.5rem;
+    padding: 3px;
+  }
+  .infospot__content {
+    font-size: 14px;
+  }
   .button {
     max-width: 2rem;
     max-height: 2rem;
