--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,13 @@ body {
 .startScherm {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  padding: 50px 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr;
+  justify-items: center;
+  align-items: center;
   background-color: black;
   opacity: 0.8;
   z-index: 99;
@@ -28,11 +34,9 @@ body {
 }
 
 .startIntructions {
-  position: absolute;
+  grid-area: 1/2;
   margin: 0;
-  top: 10%;
   width: 50rem;
-  transform: translatex(70%);
   height: 20rem;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 2rem;
@@ -65,10 +69,7 @@ body {
 }
 
 .startButton {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  grid-area: 2/2;
   background-color: green;
   color: white;
   padding: 10px 15px;
@@ -81,11 +82,9 @@ body {
 }
 
 .startFooter {
-  position: absolute;
+  grid-area: 3/2;
   margin: 0;
-  bottom: 8%;
   width: 40rem;
-  transform: translatex(100%);
   height: 8rem;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 2rem;
@@ -97,10 +96,21 @@ body {
   opacity: 0.8;
 }
 
-.startFooterImage {
+.startFooterImage, .startSettingsImage, .startOptionsImage {
   max-width: 3rem;
   max-height: 3rem;
+}
+
+.startFooterImage {
   transform: rotate(180deg);
+}
+
+.startSettingsImage {
+  transform: rotate(145deg);
+}
+
+.startOptionsImage {
+  transform: rotate(20deg);
 }
 
 .startFooterTekst {
@@ -108,10 +118,10 @@ body {
 }
 
 .startSettings {
-  position: absolute;
+  grid-area: 3/3;
+  justify-self: end;
+  align-self: end;
   margin: 0;
-  bottom: 5%;
-  right: 0;
   width: 10rem;
   height: 8rem;
   background-color: rgba(255, 255, 255, 0.9);
@@ -122,19 +132,13 @@ body {
   flex-direction: column;
   align-items: center;
   opacity: 0.8;
-}
-
-.startSettingsImage {
-  max-width: 3rem;
-  max-height: 3rem;
-  transform: rotate(145deg);
 }
 
 .startOptions {
-  position: absolute;
+  grid-area: 1/3;
+  justify-self: end;
+  align-self: start;
   margin: 0;
-  top: 8%;
-  right: 0;
   width: 10rem;
   height: 8rem;
   background-color: rgba(255, 255, 255, 0.9);
@@ -145,12 +149,6 @@ body {
   flex-direction: column;
   align-items: center;
   opacity: 0.8;
-}
-
-.startOptionsImage {
-  max-width: 3rem;
-  max-height: 3rem;
-  transform: rotate(20deg);
 }
 
 .topBar,
@@ -391,6 +389,7 @@ body {
   0% {
     margin-right: 0;
     background: url(/img/mouse-left-click.png) no-repeat;
+    background-size: contain;
   }
   30% {
     margin-right: 12rem;
@@ -400,6 +399,7 @@ body {
   }
   80% {
     background: url(/img/mouse-left-click.png) no-repeat;
+    background-size: contain;
   }
   100% {
     margin-right: 0;
@@ -430,6 +430,46 @@ body {
 @media screen and (max-height: 600px) {
   h1, h2, h3 {
     font-size: 1rem;
+  }
+  .startScherm {
+    padding: 16px;
+    row-gap: 12px;
+  }
+  .startIntructions, .startFooter {
+    padding: 12px;
+    width: 25rem;
+    height: auto;
+  }
+  .startTitle {
+    font-size: 18px;
+  }
+  .startTekst {
+    font-size: 14px;
+    text-align: center;
+    margin: 0 12px;
+  }
+  .startImage {
+    width: 2rem;
+    height: 2rem;
+    background-size: contain;
+  }
+  .startSettings, .startOptions {
+    width: 8rem;
+    height: auto;
+    padding: 12px;
+  }
+  .startIntructions > .startTekst {
+    margin: 12px;
+  }
+  .startOptions > .startTekst {
+    margin-top: 12px;
+  }
+  .startSettings > .startTekst, .startFooter > .startTekst {
+    margin-bottom: 12px;
+  }
+  .startFooterImage, .startSettingsImage, .startOptionsImage {
+    max-width: 2rem;
+    max-height: 2rem;
   }
   .header {
     padding-top: 12px;
