--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,9 @@ body {
   opacity: 0.8;
 }
 
-.startFooterImage, .startSettingsImage, .startOptionsImage {
+.startFooterImage,
+.startSettingsImage,
+.startOptionsImage {
   max-width: 3rem;
   max-height: 3rem;
 }
@@ -278,17 +280,12 @@ body {
   display: block;
 }
 
-:root {
-  --header-min-height: 5vh;
-  --subtle-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
-}
-
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: var(--header-min-height);
+  min-height: 5vh;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -388,7 +385,7 @@ body {
 .infospot {
   background-color: #fff;
   padding: 1rem;
-  box-shadow: var(--subtle-shadow);
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .infospot__title {
@@ -490,6 +487,80 @@ body {
   background-color: #ffa500;
 }
 
+.end {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  opacity: 0;
+  pointer-events: none;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+}
+.end--open {
+  opacity: 0.8;
+  pointer-events: all;
+}
+.end__content {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 2rem;
+  max-width: 55ch;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);
+  transition: all 0.4s ease-in-out;
+  z-index: 99;
+}
+.end__title {
+  margin-bottom: 1rem;
+}
+.end__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.end__button {
+  border: none;
+  background: none;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: 400;
+  color: #fff;
+  padding: 1rem 4rem;
+  cursor: pointer;
+}
+.end__button--red {
+  background-color: #ff0000;
+  border-style: solid;
+  border-width: 0.25rem;
+  border-color: #ff0000;
+  border-radius: 0.5rem;
+  transition: all 0.2s ease-in-out;
+}
+.end__button--red:hover {
+  background-color: #fff;
+  color: #ff0000;
+}
+.end__button--green {
+  background-color: #008000;
+  border-style: solid;
+  border-width: 0.25rem;
+  border-color: #008000;
+  border-radius: 0.5rem;
+  transition: all 0.2s ease-in-out;
+}
+.end__button--green:hover {
+  background-color: #fff;
+  color: #008000;
+}
+
 @keyframes mousemove {
   0% {
     transform: translateX(0);
@@ -567,7 +638,8 @@ body {
     padding: 16px;
     row-gap: 12px;
   }
-  .startIntructions, .startFooter {
+  .startIntructions,
+  .startFooter {
     padding: 12px;
     width: 25rem;
     height: auto;
@@ -584,7 +656,8 @@ body {
     width: 2rem;
     height: 2rem;
   }
-  .startSettings, .startOptions {
+  .startSettings,
+  .startOptions {
     width: 8rem;
     height: auto;
     padding: 12px;
@@ -595,10 +668,13 @@ body {
   .startOptions > .startTekst {
     margin-top: 12px;
   }
-  .startSettings > .startTekst, .startFooter > .startTekst {
+  .startSettings > .startTekst,
+  .startFooter > .startTekst {
     margin-bottom: 12px;
   }
-  .startFooterImage, .startSettingsImage, .startOptionsImage {
+  .startFooterImage,
+  .startSettingsImage,
+  .startOptionsImage {
     max-width: 2rem;
     max-height: 2rem;
   }
