--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,7 @@ body.u-overflow {
 
 .main {
   padding-block: 1rem;
+  padding-inline: 1rem;
   max-width: 75rem;
   margin-inline: auto;
 }
@@ -516,4 +517,10 @@ body.u-overflow {
   background-color: #e76f51;
   color: #fff;
   border-radius: 0.5rem;
+}
+
+@media screen and (min-width: 75em) {
+  .main {
+    padding-inline: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
