Applied scss nesting

--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -58,7 +58,7 @@ body {
 }
 
 .startButton {
-    grid-area:  2 / 2;
+    grid-area: 2 / 2;
     background-color: green;
     color: white;
     padding: 10px 15px;
@@ -85,7 +85,9 @@ body {
     opacity: 0.8;
 }
 
-.startFooterImage, .startSettingsImage, .startOptionsImage {
+.startFooterImage,
+.startSettingsImage,
+.startOptionsImage {
     max-width: 3rem;
     max-height: 3rem;
 }
@@ -101,7 +103,6 @@ body {
 .startOptionsImage {
     transform: rotate(20deg);
 }
-
 
 .startFooterTekst {
     font-size: 1.2rem;
@@ -362,14 +363,14 @@ body {
     background-color: #fff;
     padding: 1rem;
     box-shadow: var(--subtle-shadow);
-}
 
-.infospot__title {
-    color: #ffa500;
-}
+    &__title {
+        color: #ffa500;
+    }
 
-.infospot__content {
-    color: #45bccb;
+    &__content {
+        color: #45bccb;
+    }
 }
 
 .achievements {
@@ -513,7 +514,8 @@ body {
         row-gap: 12px;
     }
 
-    .startIntructions, .startFooter {
+    .startIntructions,
+    .startFooter {
         padding: 12px;
         width: 25rem;
         height: auto;
@@ -532,10 +534,10 @@ body {
     .startImage {
         width: 2rem;
         height: 2rem;
-        
     }
 
-    .startSettings, .startOptions {
+    .startSettings,
+    .startOptions {
         width: 8rem;
         height: auto;
         padding: 12px;
@@ -549,15 +551,17 @@ body {
         margin-top: 12px;
     }
 
-    .startSettings > .startTekst, .startFooter > .startTekst {
+    .startSettings > .startTekst,
+    .startFooter > .startTekst {
         margin-bottom: 12px;
     }
 
-    .startFooterImage, .startSettingsImage, .startOptionsImage {
+    .startFooterImage,
+    .startSettingsImage,
+    .startOptionsImage {
         max-width: 2rem;
         max-height: 2rem;
     }
-    
 
     .header {
         padding-top: 12px;
@@ -567,12 +571,12 @@ body {
         padding: 0;
     }
 
-    .progress{
+    .progress {
         height: 1.5rem;
         padding: 3px;
     }
 
-    .infospot__content{
+    .infospot__content {
         font-size: 14px;
     }
 
