Bug fix for leaving the tour

--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -607,6 +607,16 @@ body {
         pointer-events: all;
     }
 
+    &--end {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    &--continue {
+        opacity: 0;
+        pointer-events: none;
+    }
+
     &__content {
         display: block;
         position: absolute;
