--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -366,7 +366,7 @@ body {
     width: 100%;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .progress {
